Fix overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -599,6 +599,7 @@ li {
 
     .extra-padding {
         padding-top: 0;
+        overflow: hidden;
     }
 
     .sello.hero {
